# project-2_Veber_-M25-555

./: .gitignore  Makefile  README.md  db_meta.json  pyproject.toml
src/primitive_db/: core.py  engine.py  main.py  utils.py
