[tool.poetry]
name = "project-2-veber-m25-555"
version = "0.1.0"
description = ""
authors = ["Iuliia1910 <pestonova.yulya@yandex.ru>"]

packages = [
    { include = "src" }
]

readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

