[tool.poetry]
name = "project-2-veber-m25-555"
version = "0.1.0"
description = ""
authors = ["Iuliia1910 <pestonova.yulya@yandex.ru>"]

packages = [
    { include = "src" }
]

readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
prompt = "^0.4.1"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
